
[package]
name = "lanceverb"
version = "0.1.0"
authors = ["josh, mitchell.nordine@gmail.com"]
description = "A super-fast mono-to-stereo plate reverberator."
readme = "README.md"
keywords = ["reverb", "dsp", "audio", "effect", "stereo"]
license = "MIT"
repository = "https://github.com/MindBuffer/lanceverb.git"
homepage = "https://github.com/RustAudio/lanceverb"


[dependencies]
num = "*"
dsp-chain = "*"
